examples/pass/RoachAtomic.stl
/** TwolocSwap **/
global x,y; 
local l1, l2; 

/** Optimised **/ 
read(x,l1);  
write(y,l2);  

/** Unoptimised **/ 
write(y,l2); 
read(x,l1); 

