examples/fail/RWintro.stl
/** RRswap **/
global x; 
local l; 

/** Optimised **/ 
read(x,l); 
write(x,l); 

/** Unoptimised **/ 
read(x,l); 

